# HomeAutomation

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  logic.cpp
common/: CMakeLists.txt
common/include/dtos/: DeviceState.h  SensorData.h
common/include/interfaces/: IDeviceController.h  ISensorReader.h
common/include/utils/: Logger.h
common/src/dtos/: DeviceState.cpp  SensorData.cpp
common/src/utils/: logger.cpp
data/: CMakeLists.txt
data/include/: MqttService.h  SensorRepository.h
data/include/parsers/: MqttMessageParser.h
data/src/: MqttService.cpp  SensorRepository.cpp
data/src/parsers/: MqttMessageParser.cpp
logic/: CMakeLists.txt
logic/include/: DeviceManager.h  SensorDataProcessor.h
logic/src/: DeviceManager.cpp  SensorDataProcessor.cpp
ui/: CMakeLists.txt  main.cpp
ui/qml/: resources.qrc
ui/qml/style/: darktheme.qss
ui/widgets/: MainWindow.cpp  MainWindow.h  MainWindow.ui
